--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+
     <title>Portfolio</title>
   </head>
   <body>
@@ -30,13 +31,14 @@
           University of Mindanao. An aspiring Web-Developer who eagerly pursues
           new knowledge and skills.
         </p>
-        <a href="resume.html"><button class="cta">Resume</button></a>
+
+        <a href="resume.html"> <button class="cta">Resume</button></a>
       </div>
       <div class="content-right">
         <img class="logo" src="img/logo.jpg" alt="myLogo" />
       </div>
     </main>
-    <!-- Other sections of your portfolio -->
+
     <div class="skill-container" id="skills">
       <div class="skill-left">
         <h1>SKILLS</h1>
@@ -52,7 +54,55 @@
         <img src="img/python.png" alt="Python" />
       </div>
     </div>
-    <!-- Other sections continue -->
+
+    <div class="java-container" id="projects">
+      <div class="java-left">
+        <h1>PROJECTS:</h1>
+        <h1>JAVA PROJECT:</h1>
+        <h2>
+          Integrated Event Management System is a POS project created for party
+          shop owners to efficiently handle daily task.
+        </h2>
+        <h3>Role: One of the Front-End Developer, Project Manager</h3>
+      </div>
+      <div class="java-right">
+        <img src="img/javaProject.PNG" alt="Java Project" />
+      </div>
+    </div>
+
+    <div class="web-container">
+      <div class="web-left">
+        <img src="img/LOGIN.PNG" alt="Login" />
+      </div>
+      <div class="web-right">
+        <h1>HTML/CSS PROJECT:</h1>
+        <h2>
+          CrashCourse Application where user can learn fundamentals of html/css
+          by watching videos
+        </h2>
+        <h3>Role: One of the Front-End Developer</h3>
+      </div>
+    </div>
+
+    <div class="port-container">
+      <div class="port-left">
+        <h1>HTML/CSS PROJECT:</h1>
+        <h2>Simple Portfolio v1</h2>
+      </div>
+      <div class="port-right">
+        <img src="img/simplePortfolio.PNG" alt="Simple Portfolio" />
+      </div>
+    </div>
+
+    <div class="achievements-container" id="achievements">
+      <div class="achievements-left">
+        <h1>ACHIEVEMENTS</h1>
+      </div>
+      <div class="achievements-right">
+        <img src="img/databaseCert.PNG" alt="Database Certification" />
+        <img src="img/htmlcssCert.PNG" alt="HTML CSS Certification" />
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
