--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
         <img src="img/simplePortfolio.PNG" alt="Simple Portfolio" />
       </div>
     </div>
+
     <div class="achievements-container" id="achievements">
       <div class="achievements-left">
         <h1>ACHIEVEMENTS</h1>
@@ -102,6 +103,15 @@
         <img src="img/htmlcssCert.PNG" alt="HTML CSS Certification" />
       </div>
     </div>
+    <footer>
+      <div><h1>CONTACT ME</h1></div>
+      <div>
+        <a href="https://www.facebook.com/hahakdoooooooog" target="_blank">
+          <img src="img/fblogo.png" alt="Facebook Logo" />
+        </a>
+      </div>
+      <div><h2>#09297733090</h2></div>
+    </footer>
 
     <script src="script.js"></script>
   </body>
